--- a/R/Preliminary_report.Rmd
+++ b/R/Preliminary_report.Rmd
@@ -425,7 +425,7 @@ print(gf_stab3)
 #---- synchrony versus temperature for fish ----
 gf_syn1<-ggplot(data=sfi, aes(x=t_med_celcius, y=phi_LdM)) +
   geom_point(alpha = 0.2) +
-  geom_smooth(method="lm",se=T,color="blue",fill="cornflowerblue")+
+  geom_smooth(method="lm",se=T,color="blue",fill="dodgerblue")+
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("Synchrony (Variance Ratio)")+ylim(0,1)+
   ggtitle(taxa)+
@@ -779,13 +779,6 @@ But for fish, warming increases the richness (addition of new species), and as f
 To further explore this idea: we collected traits data for birds and fish species used in the analysis. For fish-traits, I will use body length measurements, for bird-traits I will use HWI (Hand-wing index).
 From below figures: at high T, birds have slightly less dispersal ability (lower HWI), but richness is more or less uniformly spread at either temperature range. For fish, at lowT, few large species exists with similar traits (remember the previous histogram plot 90-10) showing higher synchrony, as temperature increases addition of new small fishes in the community (maybe better environment for them to exist in that temperature rather than too cold water) makes them asynchronous with more trait variation (histogram plot 66-34).    
 
-```{r plot_direct_traits, echo=F}
-#---- plotting richness and traits for birds ----
-# these are direct traits: body size
-source(here("R/plot_birdtraits.R"))
-source(here("R/plot_fishtraits.R"))
-```
-
 When I showed this to Blake, he was not convinced by the idea to split the data into two: low/high based on t_med (to him this temperature difference is more on latitudinal differences as shown in the map), and same species can exist in both communities - so why changing t_med should change the synchrony level for fish? and getting different bodysize fish from low/high t_med (fewer big fish in lowT and many smaller fish in highT) is not explaining why big fish should be more synchronous - is it because of fewer species (richness) or because bigger fish abundance change needs more time - not on annual scale?
 
 So, I thought to make a plot of how community-level average response traits (average of standardised correlation between species abundance with t_med timeseries across sites) changes with increasing temperature (t_med)? For fish, it should decrease with increasing t_med, whereas for birds it should be a flat relationship.
@@ -796,6 +789,7 @@ library(tidyverse)
 library(ggbreak)
 library(dplyr)
 library(gridExtra)
+library(here)
 sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
 #range(sm_all$t_med)
 
@@ -824,48 +818,65 @@ mydat<-left_join(sfi,df3,by=c("STUDY_ID","newsite"))
 # Synchrony vs. temperature t_med
 gb_H11<-ggplot(data=mydat, aes(x=t_med_celcius, y=phi_LdM)) +
   geom_point(alpha = 0.2) +
-  geom_smooth(method="lm",se=T,color="green",fill="darkolivegreen1")+
+  geom_smooth(method="lm",se=T,color="green",fill="greenyellow")+
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("Synchrony (Variance Ratio)")+ylim(0,1)+
   #ggtitle(taxa)+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 ms<-summary(lm(formula = phi_LdM ~ t_med_celcius, data = mydat))
 sl<-ms$coefficients[2,1] #slope
 pval<-ms$coefficients[2,4] # pvalue
 #if(pval<0.05){
-#  gb_H11<-gb_H11+
-#    annotate("text",  x=Inf, y = -Inf, label = paste("s=",round(sl,3)),
-#             vjust=1.5, hjust=1.5, size=8)
+gb_H11<-gb_H11+
+  annotate("text",  x=-12, y = 0.9, label = paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+           vjust=0, hjust=-0.5, size=4)
 #}
-
+gb_H11
 # response traits (variability) vs. t_med plot
 gb_H12<-ggplot(mydat,aes(x=t_med_celcius,y=cortrait_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="lm",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="lm",color="green",fill="greenyellow")+
   #geom_hline(yintercept=0,linetype='dashed')+
   scale_y_log10()+
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("Variability in species' response traits \n in community, log10 scale")+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 #print(gb_H12)
+ms<-summary(lm(formula = log10(cortrait_var) ~ t_med_celcius, data = mydat))
+sl<-ms$coefficients[2,1] #slope
+pval<-ms$coefficients[2,4] # pvalue
+#if(pval<0.05){
+gb_H12<-gb_H12+
+  annotate("text",  x=-10, y = 7, label=paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+                       vjust=0, hjust=-0.5, size=4)
+#}
+gb_H12
 
 # variance ratio vs. community-wide correlation traits variability
 gb_H13<-ggplot(mydat,aes(x=cortrait_var,y=phi_LdM))+geom_point(alpha=0.2)+
-  geom_smooth(method="lm",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="lm",color="green",fill="greenyellow")+
   scale_x_continuous(trans = 'log10') +
   xlab("Variability in species' response traits \n in community, log10 scale")+
   ylab("Synchrony (Variance Ratio)")+ylim(0,1)+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 #print(gb_H13)
-
+ms<-summary(lm(formula = phi_LdM ~ log10(cortrait_var), data = mydat))
+sl<-ms$coefficients[2,1] #slope
+pval<-ms$coefficients[2,4] # pvalue
+#if(pval<0.05){
+gb_H13<-gb_H13+
+  annotate("text",  x=0.5, y = 0.9, label = paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+           vjust=0, hjust=-0.5, size=4)
+#}
+gb_H13
 #---- for fish -----
 taxa<-"fish"
 sfi<-sm_all%>%filter(TAXA==taxa)
@@ -895,53 +906,79 @@ mydat<-left_join(sfi,df3,by=c("STUDY_ID","newsite"))
 # Synchrony vs. temperature t_med
 gf_H11<-ggplot(data=mydat, aes(x=t_med_celcius, y=phi_LdM)) +
   geom_point(alpha = 0.2) +
-  geom_smooth(method="lm",se=T,color="blue",fill="cornflowerblue")+
+  geom_smooth(method="lm",se=T,color="dodgerblue",fill="steelblue1")+
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("")+ylim(0,1)+
   #ggtitle(taxa)+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+ms<-summary(lm(formula = phi_LdM ~ t_med_celcius, data = mydat))
+sl<-ms$coefficients[2,1] #slope
+pval<-ms$coefficients[2,4] # pvalue
+#if(pval<0.05){
+gf_H11<-gf_H11+
+  annotate("text",  x=5, y = 0, label = paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+           vjust=0, hjust=-0.5, size=4)
+#}
+gf_H11
 
 # response traits (variability) vs. t_med plot
 gf_H12<-ggplot(mydat,aes(x=t_med_celcius,y=cortrait_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="lm",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="lm",color="dodgerblue",fill="steelblue1")+
   geom_hline(yintercept=0,linetype='dashed')+
   scale_y_continuous(trans = 'log10') +
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("")+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 #print(gf_H12)
+ms<-summary(lm(formula = log10(cortrait_var) ~ t_med_celcius, data = mydat))
+sl<-ms$coefficients[2,1] #slope
+pval<-ms$coefficients[2,4] # pvalue
+#if(pval<0.05){
+gf_H12<-gf_H12+
+  annotate("text",  x=0, y =12, label = paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+           vjust=0, hjust=-0.1, size=4)
+#}
+gf_H12
 
 g1wbrk<-ggplot(mydat,aes(x=t_med_celcius,y=cortrait_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="lm",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="lm",color="dodgerblue",fill="steelblue1")+
   geom_hline(yintercept=0,linetype='dashed')+
   scale_y_break(c(11.5,38,42,50,56, 129))+
   ylim(0,132)+
   xlab("Temperature, MedianT (\u00B0C)")+
   ylab("Variability in species' response traits \n in community")+
- theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme_bw()+
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 #print(g1wbrk)
 
 # variance ratio vs. community-wide correlation traits variability
 gf_H13<-ggplot(mydat,aes(x=cortrait_var,y=phi_LdM))+geom_point(alpha=0.2)+
-  geom_smooth(method="lm",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="lm",color="dodgerblue",fill="steelblue1")+
   scale_x_continuous(trans = 'log10') +
   #scale_y_continuous(trans = 'log10')+
   xlab("Variability in species' response traits \n in community, log10 scale")+ylab("")+ylim(0,1)+
   theme_bw()+
-    theme(text = element_text(size = 12),axis.text = element_text(size = 12),
-          plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
-          panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
+  theme(text = element_text(size = 12),axis.text = element_text(size = 12),
+        plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
+        panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 #print(gf_H13)
-
+ms<-summary(lm(formula = phi_LdM ~ log10(cortrait_var), data = mydat))
+sl<-ms$coefficients[2,1] #slope
+pval<-ms$coefficients[2,4] # pvalue
+#if(pval<0.05){
+gf_H13<-gf_H13+
+  annotate("text",  x=1, y = 0, label = paste("sl=",round(sl,2),", p=",round(pval,3),sep=""),
+           vjust=0, hjust=-0.5, size=4)
+#}
+gf_H13
 
 pdf(here("Results/res_Prelim_Report/birds-fish-medianT-overallsyn.pdf"), width = 7, height = 9) 
 gb_H11<-gb_H11+ annotate("text",  x=Inf, y = Inf, label = "A", vjust=1.5, hjust=1.5, size=8)
@@ -1146,7 +1183,7 @@ mydat<-left_join(sfi,df4,by=c("STUDY_ID","newsite"))
 mydat$A<-mydat$L+abs(mydat$U)
 range(mydat$A)
 g3b<-ggplot(mydat,aes(x=t_skw,y=minTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="loess",color="green",fill="greenyellow")+
   xlab("Temperature skewness, SkewT")+
   ylab("Community-level variability \n in species' minimum \n thermal tolerance limit")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1155,7 +1192,7 @@ g3b<-ggplot(mydat,aes(x=t_skw,y=minTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g4b<-ggplot(mydat,aes(x=t_skw,y=maxTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="loess",color="green",fill="greenyellow")+
   xlab("Temperature skewness, SkewT")+
   ylab("Community-level variability \n in species' maximum \n thermal tolerance limit")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1164,7 +1201,7 @@ g4b<-ggplot(mydat,aes(x=t_skw,y=maxTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g5b<-ggplot(mydat,aes(y=A,x=t_skw))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="loess",color="green",fill="greenyellow")+
   xlab("Temperature skewness, SkewT")+
   ylab("Tail-dependent \n synchrony, A")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1173,7 +1210,7 @@ g5b<-ggplot(mydat,aes(y=A,x=t_skw))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g6b<-ggplot(mydat,aes(y=A,x=minTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="loess",color="green",fill="greenyellow")+
   ylab("Tail-dependent \n synchrony, A")+
   xlab("Community-level variability in species' minimum \n thermal tolerance limit")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1182,7 +1219,7 @@ g6b<-ggplot(mydat,aes(y=A,x=minTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g7b<-ggplot(mydat,aes(y=A,x=maxTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="green",fill="darkolivegreen1")+
+  geom_smooth(method="loess",color="green",fill="greenyellow")+
   ylab("Tail-dependent \n synchrony, A")+
   xlab("Community-level variability in species' maximum \n thermal tolerance limit")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1223,7 +1260,7 @@ mydat<-left_join(sfi,df4,by=c("STUDY_ID","newsite"))
 mydat$A<-mydat$L+abs(mydat$U)
 
 g3f<-ggplot(mydat,aes(x=t_skw,y=minTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="loess",color="dodgerblue",fill="steelblue1")+
   xlab("Temperature skewness, SkewT")+
   ylab("")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1232,7 +1269,7 @@ g3f<-ggplot(mydat,aes(x=t_skw,y=minTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g4f<-ggplot(mydat,aes(x=t_skw,y=maxTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="loess",color="dodgerblue",fill="steelblue1")+
   xlab("Temperature skewness, SkewT")+
   ylab("")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1241,7 +1278,7 @@ g4f<-ggplot(mydat,aes(x=t_skw,y=maxTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g5f<-ggplot(mydat,aes(y=A,x=t_skw))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="loess",color="dodgerblue",fill="steelblue1")+
   xlab("Temperature skewness, SkewT")+
   ylab("")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1250,7 +1287,7 @@ g5f<-ggplot(mydat,aes(y=A,x=t_skw))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g6f<-ggplot(mydat,aes(y=A,x=minTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="loess",color="dodgerblue",fill="steelblue1")+
   ylab("")+
   xlab("Community-level variability in species' minimum \n thermal tolerance limit")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1259,7 +1296,7 @@ g6f<-ggplot(mydat,aes(y=A,x=minTtol_var))+geom_point(alpha=0.2)+
                    panel.grid = element_line(color = rgb(235, 235, 235, 100, maxColorValue = 255)))
 
 g7f<-ggplot(mydat,aes(y=A,x=maxTtol_var))+geom_point(alpha=0.2)+
-  geom_smooth(method="loess",color="blue",fill="cornflowerblue")+
+  geom_smooth(method="loess",color="dodgerblue",fill="steelblue1")+
   xlab("Community-level variability in species' maximum \n thermal tolerance limit")+
   ylab("")+
   theme_bw()+theme(text = element_text(size = 12),
@@ -1282,6 +1319,10 @@ g7f<-g7f+ annotate("text",  x=Inf, y = Inf, label = "J", vjust=1.5, hjust=1.5, s
 grid.arrange(g3b,g4b,g5b,g6b, g7b, 
              g3f,g4f,g5f,g6f, g7f,ncol=2, as.table = FALSE)
 dev.off()
+```
+
+```{r plot-suppmatfigs, echo=F, results="hide"}
+source(here("R/plot_suppmatfigs.R"))
 ```
 
 <!--
