--- a/R/Preliminary_report.Rmd
+++ b/R/Preliminary_report.Rmd
@@ -820,7 +820,7 @@ gb_H11<-ggplot(data=mydat, aes(x=t_med_celcius, y=phi_LdM)) +
   geom_point(alpha = 0.2) +
   geom_smooth(method="lm",se=T,color="green",fill="greenyellow")+
   xlab("Temperature, MedianT (\u00B0C)")+
-  ylab("Synchrony (Variance Ratio)")+ylim(0,1)+
+  ylab("Overall synchrony")+ylim(0,1)+
   #ggtitle(taxa)+
   theme_bw()+
   theme(text = element_text(size = 12),axis.text = element_text(size = 12),
@@ -862,7 +862,7 @@ gb_H13<-ggplot(mydat,aes(x=cortrait_var,y=phi_LdM))+geom_point(alpha=0.2)+
   geom_smooth(method="lm",color="green",fill="greenyellow")+
   scale_x_continuous(trans = 'log10') +
   xlab("Variability in species' response traits \n in community, log10 scale")+
-  ylab("Synchrony (Variance Ratio)")+ylim(0,1)+
+  ylab("Overall synchrony")+ylim(0,1)+
   theme_bw()+
   theme(text = element_text(size = 12),axis.text = element_text(size = 12),
         plot.margin = margin(t = 8, r = 9, b = 4, l = 4, unit = "pt"),
